fixed alignment on about page; fixed inputs on Newsletter page, navigation links still need to be centered.

--- a/styles.css
+++ b/styles.css
@@ -23,25 +23,31 @@ nav {
     padding-bottom: 10px;
     display: flex;
     flex-basis: 100%;
-    justify-content: space-between;
+    flex-direction: row;
+    j
+
   }
 
-  #id {
-    display: flex;
-    flex-shrink: 30%;
+
+  #logo {
+    height: 40px;
+    width: 35px;
+    padding-left: 10px;
+
   }
 
-nav a{
+#test2{
   font-family: 'Roboto', sans-serif;
   text-transform: uppercase;
-  text-align: center;
-  padding-bottom: 30px;
-  padding-top: 15px;
-  margin-left: 30px;
-  margin-right: 30px;
   color: #2B2F26;
-  display:flex;
-  justify-content: center;
+  padding-top: 10px;
+  padding-left: 450px;
+  align-content: center;
+
+}
+
+nav a {
+  padding-left: 100px;
 }
 
   a:hover {
@@ -53,26 +59,37 @@ nav a{
 
   }
 
-/*ABOUT PAGE*/
+  footer {
+    background-color: #2B2F26;
+    border: 1px solid #2B2F26;
+    color: #F2F1E8;
+    text-align: left;
+    padding: 10px 0 0 20px;
+    display: flex;
+    flex-basis: 100%;
+  }
+
+/*INDEX PAGE*/
 
 .title{
   text-align: center;
   font-weight: lighter;
-  font-size: 72px;
+  font-size: 42px;
 }
 
 .images {
-  display:flex;
-  flex-direction: column;
 
+  margin: auto;
 }
-
 
 #row1 {
   display: flex;
   flex-basis: 100%;
   flex-direction:row;
   justify-content: space-between;
+  height: 300px;
+  width: 875px;
+
 }
 
 #row2 {
@@ -81,86 +98,96 @@ nav a{
   flex-direction:row;
   justify-content: space-between;
   margin: 10px, 10px;
+  height: 166px;
+  width: 875px;
 }
 
- #image1 {
+#picture1 {
+  height: 250px;
+  width: 500px;
+
+}
+
+/*
+ #picture1 {
+   display: flex;
   flex-basis:60%;
-}
-div #image2 {
-  flex-basis: 20%;
+  flex-shrink: .1;
+  */
+
+
+#picture2 {
+  height: 250px;
+  width: 158px;
 
 }
-#image3 {
-  flex-basis: 20%;
+#picture3 {
+  height: 250px;
+  width: 158px;
 }
-#image4 #image5{
-  flex-basis: 20%;
+#picture4 {
+  height: 166px;
+  width: 166px;
 }
-#image6 {
-    flex-basis: 40%;
+#picture5{
+  height: 166px;
+  width: 166px;
 }
-#image7 {
-    flex-basis: 20%;
+#picture6 {
+  height: 166px;
+  width: 333px;
+}
+#picture7 {
+  height: 166px;
+  width: 166px;
 }
 .images p {
   border: 1px solid #2B2F26;
   background-color: #2B2F26;
   color: #F2F1E8;
-  padding: 50px;
+  padding: 5px;
   box-sizing: content-box;
   text-align: center;
   position: relative;
-  top: -210px;
+  top: -60px;
 
 }
-/* picture sizing last resor
-
-
-#picture2 {
-
-}
-#picture3 {
-
-}
-
-#picture4 {
-
-}
-
-#picture5 {
-
-}
-#picture6 {
-
-}
-#picture7 {
-
-}
-*/
 
 /* NEWSLETTER PAGE */
 
-#newsletter {
+#Newsletter {
+
+  background-color: #32411A;
   background-image: url("./images/optimized/background-2.jpg");
+  background-repeat: no-repeat;
+  background-size: 100%;
+
+
 
 
 }
 
 form {
   background-color:white;
-  width: 800px;
-  height: 300px;
-  padding: 50px 10px;
-  margin: auto;
+  flex-basis: 45%;
+  padding: 50px 20px;
+  margin-left: 300px;
+  margin-right: 300px;
   margin-top: 50px;
   margin-bottom: 150px;
-  display:flex;
+  display: flex;
   flex-direction: column;
+  min-width: 750px;
+
+
 }
 
   input {
     border: none;
     border-bottom: 1px solid #968772;
+    margin-bottom:10px;
+    height:20px;
+
   }
 
 
@@ -169,6 +196,8 @@ label {
   font-family: 'Roboto', sans-serif;
   color: #968772;
   font-size: 24px;
+  text-align: left;
+  padding-top: 20px;
 
 
 }
@@ -179,8 +208,12 @@ button {
   background-color:#968772;
   color:#F2F1E8;
   padding: 12px 24px;
+  margin-top: 10px;
   font-size: 18px;
-  box-sizing: content-box;
+  align-content: center;
+  display: inline-block;
+  width: 100px;
+  align-self: center;
 
   }
 
@@ -189,28 +222,32 @@ button:hover {
   color: #FFFFFF;
 }
 
-
-footer {
-  background-color: #2B2F26;
-  border: 1px solid #2B2F26;
-  color: #F2F1E8;
-  text-align: left;
-  padding: 10px 0 0 20px;
-  display: flex;
-  flex-basis: 100%;
+form > h2 {
+  margin-bottom: 25px;
 }
+
 
 /* ABOUT PAGE*/
 
 #about_page {
   text-align: left;
-
+  width: 100%;
 
 }
 
 #about_page > section {
-  margin: 0 65px;
+  width: 65%;
+  margin: auto;
 
+
+}
+
+p a {
+  color:#968772;
+}
+
+p a:hover {
+  color: #967343;
 }
 
 #about_page > h1, h2 {
@@ -233,15 +270,26 @@ footer {
   padding-right: 20px;
   padding-bottom: 20px;
 }
-#facilities_pic > p {
+
+#quote {
+  border-left: 1px solid black;
+  padding-left: 20px;
+  font-style: italic;
+}
+
+
+#facilities > p {
   float: left;
 }
 
 #facilities_pic {
   width: 100px;
   height: 80px;
-
 }
+#facilities > p {
+  float: left;
+}
+
 table, tr, td, th{
   border:1px solid #131511;
   border-collapse: collapse;
@@ -264,6 +312,9 @@ th{
 th, tr, td {
   padding: 10px 5px;
 }
+
+
+
 /*
 Colors:
 Background: #F2F1E8
